--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,9 +1,13 @@
 # Suna-Lite 配置文件
 
-# AI 代理配置
+# AI Agent配置
 agent:
-  model: "Qwen/Qwen3-Coder-480B-A35B-Instruct"
-  base_url: "https://newapi.ihyah.top:12321/v1"
+  # 支持的模型: OpenAI GPT系列, Claude系列, 或其他兼容OpenAI API的模型
+  # 示例: "gpt-4", "gpt-3.5-turbo", "claude-3-opus-20240229"
+  model: "your_model_here"
+  # OpenAI API URL 或其他兼容的API端点
+  # 示例: "https://api.openai.com/v1"
+  base_url: "your_api_base_url_here"
   api_key: "your_api_key_here"
   max_tokens: 4000
   temperature: 0.7
